fixed visibility hidden on logo

--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -194,7 +194,7 @@ body {
 }
 
 .nav-spacer {
-  display: hidden;
+  visibility: hidden;
 }
 
 .main {
